--- a/app.json
+++ b/app.json
@@ -63,7 +63,7 @@
         },
         "CUSTOM_FILE_CAPTION": {
             "description": "A custom file caption for your files. formatable with , file_name, file_caption, file_size, Read Readme.md for better understanding.",
-            "value": "Hᴇʏ {mention}  \n\nNᴀᴍᴇ ➠ : {file_name} \n\nSɪᴢᴇ ➠ : {file_size}",
+            "value": "Hᴇʏ {mention}  \n\n**📕Nᴀᴍᴇ ➠** : `{file_name}` \n\n**🔗Sɪᴢᴇ ➠** : **{file_size}**",
             "required": false
         },
         "DATABASE_URL": {
